--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
 .container {
     max-width: 1220px;
     padding: 0 10px;
-    margin: 0 auto;
+    margin: 20px;
+  }
+
+  #output {
+    margin-top: 10px;
+    border: 1px solid black;
+    padding: 10px;
+    position: relative;
+  }
+  
+  span {
+    display: inline-block;
+  }
+  
+  .selected {
+    background-color: red;
+    cursor: move;
+    position: absolute;
   }
